--- a/SuperGameEngine/CMakeLists.txt
+++ b/SuperGameEngine/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Define solution-wide configurations
-set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Tools_Debug")
+set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Tools_Debug" CACHE STRING "Configurations" FORCE)
 
 # Add subdirectories
 add_subdirectory(SuperGameEngine)
@@ -16,16 +16,17 @@ add_subdirectory(Tools)
 add_subdirectory(Input)
 
 # Libraries under FatedQuest.Libraries
-add_subdirectory(../FatedQuest.Libraries/StandardObjects StandardObjects)
-add_subdirectory(../FatedQuest.Libraries/StandardOperations StandardOperations)
-add_subdirectory(../FatedQuest.Libraries/GamePackage GamePackage)
-add_subdirectory(../FatedQuest.Libraries/BinaryOperations BinaryOperations)
-add_subdirectory(../FatedQuest.Libraries/XmlDocument XmlDocument)
-add_subdirectory(../FatedQuest.Libraries/Logger Logger)
-add_subdirectory(../FatedQuest.Libraries/Observer Observer)
-add_subdirectory(../FatedQuest.Libraries/ClassTypes ClassTypes)
-add_subdirectory(../FatedQuest.Libraries/StoredDocument StoredDocument)
-add_subdirectory(../FatedQuest.Libraries/SharedEnums SharedEnums)
+set(FATEDQUEST_LIBRARIES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../FatedQuest.Libraries)
+add_subdirectory(${FATEDQUEST_LIBRARIES_DIR}/StandardObjects StandardObjects)
+add_subdirectory(${FATEDQUEST_LIBRARIES_DIR}/StandardOperations StandardOperations)
+add_subdirectory(${FATEDQUEST_LIBRARIES_DIR}/GamePackage GamePackage)
+add_subdirectory(${FATEDQUEST_LIBRARIES_DIR}/BinaryOperations BinaryOperations)
+add_subdirectory(${FATEDQUEST_LIBRARIES_DIR}/XmlDocument XmlDocument)
+add_subdirectory(${FATEDQUEST_LIBRARIES_DIR}/Logger Logger)
+add_subdirectory(${FATEDQUEST_LIBRARIES_DIR}/Observer Observer)
+add_subdirectory(${FATEDQUEST_LIBRARIES_DIR}/ClassTypes ClassTypes)
+add_subdirectory(${FATEDQUEST_LIBRARIES_DIR}/StoredDocument StoredDocument)
+add_subdirectory(${FATEDQUEST_LIBRARIES_DIR}/SharedEnums SharedEnums)
 
 # Solution Folders
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
@@ -40,15 +41,21 @@ set_target_properties(ClassTypes PROPERTIES FOLDER "FatedQuest.Libraries")
 set_target_properties(StoredDocument PROPERTIES FOLDER "FatedQuest.Libraries")
 set_target_properties(SharedEnums PROPERTIES FOLDER "FatedQuest.Libraries")
 
+option(ENABLE_TESTS "Enable tests" OFF)
+
+message(STATUS "ENABLE_TESTS: ${ENABLE_TESTS}")
+message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
+message(STATUS "CMAKE_CONFIGURATION_TYPES: ${CMAKE_CONFIGURATION_TYPES}")
+
 if(ENABLE_TESTS)
     add_subdirectory(EngineTests)
     add_subdirectory(ToolsTests)
     add_subdirectory(InputTests)
 
-    add_subdirectory(../FatedQuest.Libraries/StandardOperationsTests StandardOperationsTests)
-    add_subdirectory(../../../FatedQuest.Libraries/XmlDocumentTests XmlDocumentTests)
-    add_subdirectory(../FatedQuest.Libraries/StandardObjectsTests StandardObjectsTests)
-    add_subdirectory(../FatedQuest.Libraries/GamePackageTests GamePackageTests)
+    add_subdirectory(${FATEDQUEST_LIBRARIES_DIR}/StandardOperationsTests StandardOperationsTests)
+    add_subdirectory(${FATEDQUEST_LIBRARIES_DIR}/XmlDocumentTests XmlDocumentTests)
+    add_subdirectory(${FATEDQUEST_LIBRARIES_DIR}/StandardObjectsTests StandardObjectsTests)
+    add_subdirectory(${FATEDQUEST_LIBRARIES_DIR}/GamePackageTests GamePackageTests)
 
     set_target_properties(XmlDocumentTests PROPERTIES FOLDER "FatedQuest.Libraries")
     set_target_properties(StandardOperationsTests PROPERTIES FOLDER "FatedQuest.Libraries")
