--- a/.gitignore
+++ b/.gitignore
@@ -402,25 +402,25 @@ FodyWeavers.xsd
 [Tt]ools_[Dd]ebug/
 
 # Ignore Visual Studio project and solution files
-*.sln
-*.sln*
-*.vcxproj
-*.vcxproj*
-*.vcxproj.filters
-*.vcxproj.user
-*.csproj
-*.csproj.user
-*.csproj.filters
-*.vbproj
-*.vbproj.user
-*.vbproj.filters
-*.fsproj
-*.fsproj.user
-*.fsproj.filters
+**/*.sln
+**/*.sln*
+**/*.vcxproj
+**/*.vcxproj*
+**/*.vcxproj.filters
+**/*.vcxproj.user
+**/*.csproj
+**/*.csproj.user
+**/*.csproj.filters
+**/*.vbproj
+**/*.vbproj.user
+**/*.vbproj.filters
+**/*.fsproj
+**/*.fsproj.user
+**/*.fsproj.filters
 
 # Ignore IntelliSense and browsing database files
-*.VC.db
-*.VC.opendb
-*.opensdf
-*.sdf
-*.ncb
+**/*.VC.db
+**/*.VC.opendb
+**/*.opensdf
+**/*.sdf
+**/*.ncb
