--- a/SuperGameEngine/CMakeLists.txt
+++ b/SuperGameEngine/CMakeLists.txt
@@ -11,6 +11,13 @@ endif()
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Find and use vcpkg
+if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
+    set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/Build/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
+endif()
+message("CMAKE_TOOLCHAIN_FILE set to ${CMAKE_TOOLCHAIN_FILE}")
+message("CMAKE_PREFIX_PATH set to ${CMAKE_PREFIX_PATH}")
+
 # Define solution-wide configurations
 set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Tools_Debug" CACHE STRING "Configurations" FORCE)
 
