--- a/FatedQuest.Libraries/Logger/CMakeLists.txt
+++ b/FatedQuest.Libraries/Logger/CMakeLists.txt
@@ -60,6 +60,13 @@ if(WIN32)
     target_compile_options(Logger PRIVATE /W3 /permissive- /Zc:preprocessor /MP)
 endif()
 
+# Include these by default in all CPP files.
+if (MSVC)
+    target_compile_options(Engine PRIVATE "/FIcmake_pch.hxx" "/FIpch.h")
+elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
+    target_compile_options(Engine PRIVATE "-include cmake_pch.hxx;pch.h")
+endif()
+
 # Set configurations
 foreach(OUTPUTCONFIG Debug Release Tools_Debug)
     string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG_UPPER)
