--- a/Tools/SuperGenerator/SuperGenerator/SuperEnumGenerator/CMakeLists.txt
+++ b/Tools/SuperGenerator/SuperGenerator/SuperEnumGenerator/CMakeLists.txt
@@ -48,6 +48,13 @@ if(MSVC)
     target_precompile_headers(SuperEnumGenerator PRIVATE ${PCH_HEADER})
 endif()
 
+# Include these by default in all CPP files.
+if (MSVC)
+    target_compile_options(Engine PRIVATE "/FIcmake_pch.hxx" "/FIpch.h")
+elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
+    target_compile_options(Engine PRIVATE "-include cmake_pch.hxx;pch.h")
+endif()
+
 # Platform-specific settings
 if(WIN32)
     target_compile_definitions(SuperEnumGenerator PRIVATE _WINDOWS)
