--- a/FatedQuest.Libraries/StandardObjects/CMakeLists.txt
+++ b/FatedQuest.Libraries/StandardObjects/CMakeLists.txt
@@ -56,9 +56,9 @@ endif()
 
 # Include these by default in all CPP files.
 if (MSVC)
-    target_compile_options(Engine PRIVATE "/FIcmake_pch.hxx" "/FIpch.h")
+    target_compile_options(StandardObjects PRIVATE "/FIcmake_pch.hxx" "/FIpch.h")
 elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
-    target_compile_options(Engine PRIVATE "-include cmake_pch.hxx;pch.h")
+    target_compile_options(StandardObjects PRIVATE "-include cmake_pch.hxx;pch.h")
 endif()
 
 # Platform-specific settings
