Removed cmake precompiled include

--- a/FatedQuest.Libraries/BinaryOperations/CMakeLists.txt
+++ b/FatedQuest.Libraries/BinaryOperations/CMakeLists.txt
@@ -60,9 +60,9 @@ endif()
 
 # Include these by default in all CPP files.
 if (MSVC)
-    target_compile_options(BinaryOperations PRIVATE "/FIcmake_pch.hxx" "/FIpch.h")
+    target_compile_options(BinaryOperations PRIVATE "/FI${PCH_HEADER}")
 elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
-    target_compile_options(BinaryOperations PRIVATE "-include cmake_pch.hxx;pch.h")
+    target_compile_options(BinaryOperations PRIVATE "-include ${PCH_HEADER}")
 endif()
 
 # Platform-specific settings
