--- a/SuperGameEngine/Input/CMakeLists.txt
+++ b/SuperGameEngine/Input/CMakeLists.txt
@@ -56,9 +56,9 @@ endif()
 
 # Include these by default in all CPP files.
 if (MSVC)
-    target_compile_options(Input PRIVATE "/FIcmake_pch.hxx" "/FIpch.h")
+    target_compile_options(Input PRIVATE "/FI${PCH_HEADER}")
 elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
-    target_compile_options(Input PRIVATE "-include cmake_pch.hxx;pch.h")
+    target_compile_options(Input PRIVATE "-include ${PCH_HEADER}")
 endif()
 
 # Platform-specific settings
