--- a/Tools/SuperGenerator/SuperGenerator/SuperEnumGenerator/CMakeLists.txt
+++ b/Tools/SuperGenerator/SuperGenerator/SuperEnumGenerator/CMakeLists.txt
@@ -50,9 +50,9 @@ endif()
 
 # Include these by default in all CPP files.
 if (MSVC)
-    target_compile_options(SuperEnumGenerator PRIVATE "/FIcmake_pch.hxx" "/FIpch.h")
+    target_compile_options(SuperEnumGenerator PRIVATE "/FI${PCH_HEADER}")
 elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
-    target_compile_options(SuperEnumGenerator PRIVATE "-include cmake_pch.hxx;pch.h")
+    target_compile_options(SuperEnumGenerator PRIVATE "-include ${PCH_HEADER}")
 endif()
 
 # Platform-specific settings
