--- a/SuperGameEngine/Tools/CMakeLists.txt
+++ b/SuperGameEngine/Tools/CMakeLists.txt
@@ -85,6 +85,6 @@ NugetInclude("sdl2Image" Tools)
 add_subdirectory(../Engine Engine)
 
 # Link dependencies
-target_link_libraries(Tools PUBLIC
+target_link_libraries(Tools PRIVATE
     Engine
 )
