--- a/SuperGameEngine/Tools/CMakeLists.txt
+++ b/SuperGameEngine/Tools/CMakeLists.txt
@@ -11,6 +11,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 if(ENABLE_TOOLS)
     set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Tools_Debug" CACHE STRING "Available build types" FORCE)
     set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<OR:$<CONFIG:Debug>,$<CONFIG:Tools_Debug>>:Debug>DLL")
+    
+    set(CMAKE_C_FLAGS_Tools_Debug "${CMAKE_C_FLAGS_DEBUG}" CACHE STRING "C flags for Tools_Debug" FORCE)
+    set(CMAKE_CXX_FLAGS_Tools_Debug "${CMAKE_CXX_FLAGS_DEBUG}" CACHE STRING "C++ flags for Tools_Debug" FORCE)
 else()
     set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Available build types" FORCE)
 endif()
@@ -64,7 +67,17 @@ endif()
 # Platform-specific settings
 if(WIN32)
     target_compile_definitions(Tools PRIVATE _WINDOWS)
-    target_compile_options(Tools PRIVATE /W3 /permissive- /Zc:preprocessor /MP)
+    
+    target_compile_options(Tools PRIVATE
+      /W3
+      /permissive-
+      /Zc:preprocessor
+      /MP
+      
+      # Ensure Tools Debug and Debug have symbols.
+      $<$<OR:$<CONFIG:Debug>,$<CONFIG:Tools_Debug>>:/Zi>
+      $<$<OR:$<CONFIG:Debug>,$<CONFIG:Tools_Debug>>:/Od>
+    )
 endif()
 
 # Set configurations
