--- a/SuperGameEngine/SuperGameEngine/CMakeLists.txt
+++ b/SuperGameEngine/SuperGameEngine/CMakeLists.txt
@@ -14,6 +14,9 @@ if(ENABLE_TOOLS)
     set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Tools_Debug" CACHE STRING "Available build types" FORCE)
     set(CMAKE_EXE_LINKER_FLAGS_TOOLS_DEBUG "")
     set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<OR:$<CONFIG:Debug>,$<CONFIG:Tools_Debug>>:Debug>DLL")
+    
+    set(CMAKE_C_FLAGS_Tools_Debug "${CMAKE_C_FLAGS_DEBUG}" CACHE STRING "C flags for Tools_Debug" FORCE)
+    set(CMAKE_CXX_FLAGS_Tools_Debug "${CMAKE_CXX_FLAGS_DEBUG}" CACHE STRING "C++ flags for Tools_Debug" FORCE)
 else()
     set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Available build types" FORCE)
 endif()
@@ -58,7 +61,21 @@ target_include_directories(SuperGameEngine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 # Platform-specific settings
 if(WIN32)
     target_compile_definitions(SuperGameEngine PRIVATE _WINDOWS)
-    target_compile_options(SuperGameEngine PRIVATE /W3 /permissive- /Zc:preprocessor /MP)
+    target_compile_options(SuperGameEngine PRIVATE
+      /W3
+      /permissive-
+      /Zc:preprocessor
+      /MP
+      
+      # Ensure Tools Debug and Debug have symbols.
+      $<$<OR:$<CONFIG:Debug>,$<CONFIG:Tools_Debug>>:/Zi>
+      $<$<OR:$<CONFIG:Debug>,$<CONFIG:Tools_Debug>>:/Od>
+    )
+
+    # then tell the linker to emit debug info in those configs
+    target_link_options(SuperGameEngine PRIVATE
+      $<$<OR:$<CONFIG:Debug>,$<CONFIG:Tools_Debug>>:/DEBUG>
+    )
 endif()
 
 # Set configurations
