--- a/SuperGameEngine/ToolsTests/CMakeLists.txt
+++ b/SuperGameEngine/ToolsTests/CMakeLists.txt
@@ -47,7 +47,13 @@ set_target_properties(ToolsTests PROPERTIES LINK_FLAGS "/SUBSYSTEM:CONSOLE")
 # Set compiler options
 if(MSVC)
     target_compile_definitions(ToolsTests PRIVATE _CRT_SECURE_NO_WARNINGS)
-    target_compile_options(ToolsTests PRIVATE /W3)
+    target_compile_options(ToolsTests PRIVATE
+      /W3
+      
+      # Ensure Tools Debug and Debug have symbols.
+      $<$<OR:$<CONFIG:Debug>,$<CONFIG:Tools_Debug>>:/Zi>
+      $<$<OR:$<CONFIG:Debug>,$<CONFIG:Tools_Debug>>:/Od>
+    )
 endif()
 
 # Include directories
